@@ -7,7 +7,6 @@ import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
 
 import org.pragmatica.lang.Unit;
@@ -16,6 +15,7 @@ import org.pragmatica.lang.Result;
 import org.pragmatica.peg.grammar.Expression;
 import org.pragmatica.peg.grammar.Grammar;
 import org.pragmatica.peg.grammar.Rule;
+import org.pragmatica.peg.grammar.analysis.WidthAnalysis;
 
 
 /**
@@ -67,10 +67,13 @@ public final class RuleClassifier {
      * the body alone — bypassing the unsupported {@code Not} node — while the
      * lexer engine performs post-match keyword resolution by matched text.
      *
-     * @param keywordRuleName name of the rule referenced by the leading {@code !}
+     * @param keywordRuleNames names of the rules referenced by the leading {@code !} guards, in
+     *                          source order. A rule may carry several — {@code WindowName <-
+     *                          !PartitionKW !OrderKW ColId} excludes each of them — and the guard
+     *                          sets are unioned by the consumers.
      * @param bodyExpression  rest of the sequence after the {@code !Reference} head
      */
-    public record KeywordSkipInfo(String keywordRuleName, Expression bodyExpression) {}
+    public record KeywordSkipInfo(List<String> keywordRuleNames, Expression bodyExpression) {}
 
     public record Classification(Map<String, RuleKind> kinds,
                                  Map<String, KeywordSkipInfo> keywordSkip,
@@ -89,15 +92,42 @@ public final class RuleClassifier {
         }
 
         var properties = collectProperties(rules);
-        var kinds = initialLabelling(properties);
+        var kinds = initialLabelling(properties,
+                                     grammar.ruleMap(),
+                                     WidthAnalysis.computeAlwaysEmpty(grammar.ruleMap()));
+        var pinned = pinnedParserRules(grammar, kinds);
 
         runFixedPointDemotion(properties, kinds);
-        var keywordSkip = detectSkipPrefixRules(grammar, properties, kinds);
-        var warnings = collectWarnings(rules, properties, kinds);
+        var keywordSkip = detectSkipPrefixRules(grammar, properties, kinds, pinned);
+        var warnings = collectWarnings(pinned, rules, properties, kinds);
 
         return Result.success(new Classification(Collections.unmodifiableMap(kinds),
                                                  Map.copyOf(keywordSkip),
                                                  List.copyOf(warnings)));
+    }
+
+    /**
+     * Apply {@code %parser RuleName} pins, returning the set that was actually applied.
+     *
+     * <p>Classification is inferred from body shape, and the inference cannot tell a rule that IS
+     * a token from one that merely names tokens: a reference-only body spanning a single token
+     * reads as lexical, which is right for an alias and wrong for a rule whose purpose is to
+     * choose between token kinds at parse time. The pin lets the author say which they meant.
+     *
+     * <p>A pin naming a rule the grammar does not declare is ignored rather than fatal, matching
+     * how {@code %memo} treats unknown names.
+     */
+    private static Set<String> pinnedParserRules(Grammar grammar, Map<String, RuleKind> kinds) {
+        var applied = new HashSet<String>();
+
+        for (var name : grammar.parserRules()) {
+            if (kinds.containsKey(name)) {
+                kinds.put(name, RuleKind.PARSER);
+                applied.add(name);
+            }
+        }
+
+        return applied;
     }
 
     private static Map<String, RuleProperties> collectProperties(List<Rule> rules) {
@@ -124,7 +154,9 @@ public final class RuleClassifier {
      *   <li>Empty/combinator-only body → LEXER (degenerate case).</li>
      * </ul>
      */
-    private static Map<String, RuleKind> initialLabelling(Map<String, RuleProperties> properties) {
+    private static Map<String, RuleKind> initialLabelling(Map<String, RuleProperties> properties,
+                                                          Map<String, Rule> ruleMap,
+                                                          Map<String, Boolean> alwaysEmpty) {
         var kinds = new HashMap<String, RuleKind>();
 
         for (var entry : properties.entrySet()) {
@@ -134,12 +166,122 @@ public final class RuleClassifier {
                 kinds.put(entry.getKey(), RuleKind.PARSER);
             } else if (p.referencesAnyRule && p.hasTerminals) {
                 kinds.put(entry.getKey(), RuleKind.PARSER);
+            } else if (alwaysEmpty.getOrDefault(entry.getKey(), false)) {
+                // A token has to consume something. A rule that can match ONLY the empty string
+                // cannot be one — e.g. {@code EmptyStatement <- &';' / !.}, which reads as lexical
+                // because it names no other rule, but asserts a position rather than describing a
+                // lexeme. Note the test is always-empty, not nullable: {@code Word <- [a-z]*} is
+                // nullable and is a legitimate lexer rule, warned about rather than reclassified.
+                kinds.put(entry.getKey(), RuleKind.PARSER);
+            } else if (p.referencesAnyRule && !spansSingleToken(entry.getKey(), ruleMap)) {
+                // A body of nothing but references spanning more than one token is a sequence of
+                // tokens, which is parsing: IfNotExists <- IfKW NotKW ExistsKW is three tokens with
+                // trivia between them, and fusing them into the DFA yields a lexeme spelled
+                // IFNOTEXISTS that no input contains. Composing ONE token out of finer rules is a
+                // real and different intent — Identifier <- IdStart IdCont* — and it is spelled by
+                // wrapping the body in a token boundary, which is what < > already means.
+                kinds.put(entry.getKey(), RuleKind.PARSER);
             } else {
                 kinds.put(entry.getKey(), RuleKind.LEXER);
             }
         }
 
         return kinds;
+    }
+
+    /**
+     * Whether a reference-only rule describes a single token.
+     *
+     * <p>True when the body declares itself a token with {@code < >}, or when it spans exactly one
+     * token anyway (an alias for one rule, or a choice between shapes). The token boundary is an
+     * explicit override and is trusted: an author who writes {@code < IfKW NotKW ExistsKW >} has
+     * asked for the fused lexeme.
+     */
+    private static boolean spansSingleToken(String ruleName, Map<String, Rule> ruleMap) {
+        var rule = ruleMap.get(ruleName);
+
+        if (rule == null) {
+            return true;
+        }
+
+        return declaresTokenBoundary(rule.expression()) || referenceTokenCount(rule.expression()) == 1;
+    }
+
+    private static boolean declaresTokenBoundary(Expression expr) {
+        return switch (expr) {
+            case Expression.TokenBoundary __ -> true;
+            case Expression.Group g -> declaresTokenBoundary(g.expression());
+            default -> false;
+        };
+    }
+
+    /** A token span that depends on the input rather than being fixed by the grammar. */
+    private static final int VARIABLE_TOKEN_COUNT = -1;
+
+    /**
+     * How many tokens a reference-only body spans.
+     *
+     * <p>Only meaningful where the body names no terminal, which is the one place the caller
+     * applies it. A reference counts as one token; lookahead and cut consume nothing; repetition
+     * and optionality make the span depend on the input and so are never a fixed single token.
+     */
+    private static int referenceTokenCount(Expression expr) {
+        return switch (expr) {
+            case Expression.Reference __ -> 1;
+            case Expression.And __ -> 0;
+            case Expression.Not __ -> 0;
+            case Expression.Cut __ -> 0;
+            case Expression.Sequence seq -> sumTokenCounts(seq.elements());
+            case Expression.Choice ch -> maxTokenCount(ch.alternatives());
+            case Expression.Group g -> referenceTokenCount(g.expression());
+            case Expression.TokenBoundary tb -> referenceTokenCount(tb.expression());
+            case Expression.Capture cap -> referenceTokenCount(cap.expression());
+            case Expression.CaptureScope cs -> referenceTokenCount(cs.expression());
+            case Expression.Ignore ig -> referenceTokenCount(ig.expression());
+            case Expression.ZeroOrMore __ -> VARIABLE_TOKEN_COUNT;
+            case Expression.OneOrMore __ -> VARIABLE_TOKEN_COUNT;
+            case Expression.Optional __ -> VARIABLE_TOKEN_COUNT;
+            case Expression.Repetition __ -> VARIABLE_TOKEN_COUNT;
+            // Terminals are characters within a token rather than tokens, so a body containing one
+            // is not reference-only and does not reach here.
+            case Expression.Literal __ -> VARIABLE_TOKEN_COUNT;
+            case Expression.CharClass __ -> VARIABLE_TOKEN_COUNT;
+            case Expression.Any __ -> VARIABLE_TOKEN_COUNT;
+            case Expression.BackReference __ -> VARIABLE_TOKEN_COUNT;
+            case Expression.Dictionary __ -> VARIABLE_TOKEN_COUNT;
+        };
+    }
+
+    private static int sumTokenCounts(List<Expression> elements) {
+        int total = 0;
+
+        for (var element : elements) {
+            int count = referenceTokenCount(element);
+
+            if (count == VARIABLE_TOKEN_COUNT) {
+                return VARIABLE_TOKEN_COUNT;
+            }
+
+            total += count;
+        }
+
+        return total;
+    }
+
+    private static int maxTokenCount(List<Expression> alternatives) {
+        int max = 0;
+
+        for (var alternative : alternatives) {
+            int count = referenceTokenCount(alternative);
+
+            if (count == VARIABLE_TOKEN_COUNT) {
+                return VARIABLE_TOKEN_COUNT;
+            }
+
+            max = Math.max(max, count);
+        }
+
+        return max;
     }
 
     /**
@@ -186,7 +328,8 @@ public final class RuleClassifier {
         return reverse;
     }
 
-    private static List<Warning> collectWarnings(List<Rule> rules,
+    private static List<Warning> collectWarnings(Set<String> pinned,
+                                                 List<Rule> rules,
                                                  Map<String, RuleProperties> properties,
                                                  Map<String, RuleKind> kinds) {
         var warnings = new ArrayList<Warning>();
@@ -195,7 +338,7 @@ public final class RuleClassifier {
             var name = rule.name();
             var p = properties.get(name);
 
-            if (kinds.get(name) == RuleKind.PARSER && p.usesCharLevelConstructs && p.referencesAnyRule) {
+            if (kinds.get(name) == RuleKind.PARSER && !pinned.contains(name) && p.usesCharLevelConstructs && p.referencesAnyRule) {
                 kinds.put(name, RuleKind.MIXED);
                 warnings.add(new Warning(name,
                                          "rule combines rule references with character-level constructs (., [..], or char-level &/!); "
@@ -220,73 +363,263 @@ public final class RuleClassifier {
      */
     private static Map<String, KeywordSkipInfo> detectSkipPrefixRules(Grammar grammar,
                                                                       Map<String, RuleProperties> properties,
-                                                                      Map<String, RuleKind> kinds) {
+                                                                      Map<String, RuleKind> kinds,
+                                                                      Set<String> pinned) {
         var result = new LinkedHashMap<String, KeywordSkipInfo>();
         var ruleMap = grammar.ruleMap();
 
         for (var rule : grammar.rules()) {
-            var info = detectSkipPrefix(rule.expression(), ruleMap);
-
-            if (info.isEmpty()) {
+            // A pinned rule stays PARSER; skip-prefix registration would force it back to LEXER.
+            if (pinned.contains(rule.name())) {
                 continue;
             }
 
-            var bodyProps = analyse(info.get().bodyExpression());
-            // Body must itself be pure-lexical (no rule references, no back-references, no dictionaries).
-            if (!bodyProps.usesOnlyLexicalConstructs() || bodyProps.referencesAnyRule()) {
-                continue;
-            }
-            // Force LEXER classification so DFA picks it up.
-            kinds.put(rule.name(), RuleKind.LEXER);
-            result.put(rule.name(), info.get());
-            // Update properties so downstream consumers see the body-only shape.
-            properties.put(rule.name(), bodyProps);
+            detectSkipPrefix(rule.expression(), ruleMap).onPresent(info -> recordSkipPrefix(rule,
+                                                                                            info,
+                                                                                            ruleMap,
+                                                                                            kinds,
+                                                                                            properties,
+                                                                                            result));
         }
 
         return result;
     }
 
-    private static Optional<KeywordSkipInfo> detectSkipPrefix(Expression expr, Map<String, Rule> ruleMap) {
+    private static void recordSkipPrefix(Rule rule,
+                                         KeywordSkipInfo info,
+                                         Map<String, Rule> ruleMap,
+                                         Map<String, RuleKind> kinds,
+                                         Map<String, RuleProperties> properties,
+                                         Map<String, KeywordSkipInfo> result) {
+        var body = resolveSkipBody(info.bodyExpression(), ruleMap, kinds);
+
+        if (body.isEmpty()) {
+            return;
+        }
+
+        var resolved = body.unwrap();
+        // Force LEXER classification so DFA picks it up.
+        kinds.put(rule.name(), RuleKind.LEXER);
+        result.put(rule.name(), new KeywordSkipInfo(info.keywordRuleNames(), resolved));
+        // Update properties so downstream consumers see the body-only shape.
+        properties.put(rule.name(), analyse(resolved));
+    }
+
+    /**
+     * The DFA builder compiles a skip-prefix body on its own, so the body has to be pure-lexical.
+     * A body that names other LEXER rules qualifies once those references are substituted — which
+     * is what lets a rule carry both a keyword guard and named alternatives:
+     *
+     * <pre>{@code ColId <- !ReservedKeyword (QuotedIdent / UnquotedIdent)}</pre>
+     *
+     * Before substitution the guard forced the alternatives to be hand-inlined at every use site,
+     * because the guard needs a named rule and a rule naming the alternatives was rejected here.
+     *
+     * <p>Returns {@link Option#none()} when the body cannot be made pure-lexical, leaving the rule
+     * unregistered exactly as before.
+     */
+    private static Option<Expression> resolveSkipBody(Expression body,
+                                                      Map<String, Rule> ruleMap,
+                                                      Map<String, RuleKind> kinds) {
+        var props = analyse(body);
+
+        if (!props.usesOnlyLexicalConstructs()) {
+            return Option.none();
+        }
+
+        if (!props.referencesAnyRule()) {
+            return Option.some(body);
+        }
+
+        var expanded = inlineLexerReferences(body, ruleMap, kinds);
+
+        if (expanded.isEmpty()) {
+            return Option.none();
+        }
+
+        var expandedProps = analyse(expanded.unwrap());
+
+        return expandedProps.usesOnlyLexicalConstructs() && !expandedProps.referencesAnyRule()
+               ? expanded
+               : Option.none();
+    }
+
+    /**
+     * Substitute every {@link Expression.Reference} to a LEXER-classified rule with that rule's
+     * own expression, recursively.
+     *
+     * <p>A DFA has no call stack, so {@link org.pragmatica.peg.lexer.DfaBuilder} cannot compile a
+     * rule reference directly. Before 0.7.2 that made any reference fatal to lexical compilation,
+     * which forced grammar authors to hand-inline shared lexical shapes — and made the
+     * combination "guard plus alternatives" inexpressible, because the guard requires a named
+     * rule and the alternatives then cannot be named. Reference substitution is sound precisely
+     * because the referenced rules are themselves regular: inlining a non-recursive reference
+     * yields the same language.
+     *
+     * <p>Returns {@link Option#none()} when substitution would not terminate (a reference cycle)
+     * or would change classification (a reference to a non-LEXER rule). Callers leave the
+     * expression untouched in that case, so the existing "cannot compile" path reports it.
+     */
+    public static Option<Expression> inlineLexerReferences(Expression expr,
+                                                           Map<String, Rule> ruleMap,
+                                                           Map<String, RuleKind> kinds) {
+        return substitute(expr, ruleMap, kinds, new HashSet<>());
+    }
+
+    private static Option<Expression> substitute(Expression expr,
+                                                 Map<String, Rule> ruleMap,
+                                                 Map<String, RuleKind> kinds,
+                                                 Set<String> onPath) {
+        return switch (expr) {
+            case Expression.Reference ref -> substituteReference(ref, ruleMap, kinds, onPath);
+            case Expression.Sequence seq -> substituteList(seq.elements(), ruleMap, kinds, onPath).map(list -> new Expression.Sequence(seq.span(),
+                                                                                                                                       list));
+            case Expression.Choice ch -> substituteList(ch.alternatives(), ruleMap, kinds, onPath).map(list -> new Expression.Choice(ch.span(),
+                                                                                                                                     list));
+            case Expression.ZeroOrMore z -> substitute(z.expression(), ruleMap, kinds, onPath).map(inner -> new Expression.ZeroOrMore(z.span(),
+                                                                                                                                      inner));
+            case Expression.OneOrMore o -> substitute(o.expression(), ruleMap, kinds, onPath).map(inner -> new Expression.OneOrMore(o.span(),
+                                                                                                                                    inner));
+            case Expression.Optional opt -> substitute(opt.expression(), ruleMap, kinds, onPath).map(inner -> new Expression.Optional(opt.span(),
+                                                                                                                                      inner));
+            case Expression.Repetition rep -> substitute(rep.expression(), ruleMap, kinds, onPath).map(inner -> new Expression.Repetition(rep.span(),
+                                                                                                                                          inner,
+                                                                                                                                          rep.min(),
+                                                                                                                                          rep.max()));
+            case Expression.And and -> substitute(and.expression(), ruleMap, kinds, onPath).map(inner -> new Expression.And(and.span(),
+                                                                                                                            inner));
+            case Expression.Not not -> substitute(not.expression(), ruleMap, kinds, onPath).map(inner -> new Expression.Not(not.span(),
+                                                                                                                            inner));
+            case Expression.TokenBoundary tb -> substitute(tb.expression(), ruleMap, kinds, onPath).map(inner -> new Expression.TokenBoundary(tb.span(),
+                                                                                                                                              inner));
+            case Expression.Ignore ig -> substitute(ig.expression(), ruleMap, kinds, onPath).map(inner -> new Expression.Ignore(ig.span(),
+                                                                                                                                inner));
+            case Expression.Capture cap -> substitute(cap.expression(), ruleMap, kinds, onPath).map(inner -> new Expression.Capture(cap.span(),
+                                                                                                                                    cap.name(),
+                                                                                                                                    inner));
+            case Expression.CaptureScope cs -> substitute(cs.expression(), ruleMap, kinds, onPath).map(inner -> new Expression.CaptureScope(cs.span(),
+                                                                                                                                            inner));
+            case Expression.Group g -> substitute(g.expression(), ruleMap, kinds, onPath).map(inner -> new Expression.Group(g.span(),
+                                                                                                                            inner));
+            // Terminals and categorical non-lexicals substitute to themselves. BackReference and
+            // Dictionary are not regular, but they are rejected by the DFA builder on their own
+            // merits, so passing them through keeps that diagnosis where it already lives.
+            case Expression.Literal __ -> Option.some(expr);
+            case Expression.CharClass __ -> Option.some(expr);
+            case Expression.Any __ -> Option.some(expr);
+            case Expression.Cut __ -> Option.some(expr);
+            case Expression.BackReference __ -> Option.some(expr);
+            case Expression.Dictionary __ -> Option.some(expr);
+        };
+    }
+
+    private static Option<Expression> substituteReference(Expression.Reference ref,
+                                                          Map<String, Rule> ruleMap,
+                                                          Map<String, RuleKind> kinds,
+                                                          Set<String> onPath) {
+        var name = ref.ruleName();
+
+        if (onPath.contains(name)) {
+            // Recursive lexical rule — not regular, cannot be flattened into a DFA.
+            return Option.none();
+        }
+
+        if (kinds.get(name) != RuleKind.LEXER) {
+            return Option.none();
+        }
+
+        var target = ruleMap.get(name);
+
+        if (target == null) {
+            return Option.none();
+        }
+
+        onPath.add(name);
+        var expanded = substitute(target.expression(), ruleMap, kinds, onPath);
+
+        onPath.remove(name);
+        // Wrap in a Group so that substituting into a Sequence cannot re-associate
+        // the referenced rule's own alternation with its neighbours.
+        return expanded.map(inner -> new Expression.Group(ref.span(), inner));
+    }
+
+    private static Option<List<Expression>> substituteList(List<Expression> items,
+                                                           Map<String, Rule> ruleMap,
+                                                           Map<String, RuleKind> kinds,
+                                                           Set<String> onPath) {
+        var out = new ArrayList<Expression>(items.size());
+
+        for (var item : items) {
+            var substituted = substitute(item, ruleMap, kinds, onPath);
+
+            if (substituted.isEmpty()) {
+                return Option.none();
+            }
+
+            out.add(substituted.unwrap());
+        }
+
+        return Option.some(List.copyOf(out));
+    }
+
+    private static Option<KeywordSkipInfo> detectSkipPrefix(Expression expr, Map<String, Rule> ruleMap) {
         var unwrapped = unwrapWrappers(expr);
 
         if (! (unwrapped instanceof Expression.Sequence seq)) {
-            return Optional.empty();
+            return Option.none();
         }
 
         var elements = seq.elements();
 
         if (elements.size() < 2) {
-            return Optional.empty();
+            return Option.none();
+        }
+        // Consume every leading !Rule guard, not just the first. A rule excluding several
+        // keywords — WindowName <- !PartitionKW !OrderKW !RowsKW ColId — is one guarded rule with
+        // a union of guard sets, not a different shape.
+        var guards = new ArrayList<String>();
+        int index = 0;
+
+        while (index < elements.size() - 1) {
+            var guard = leadingGuardName(elements.get(index), ruleMap);
+
+            if (guard.isEmpty()) {
+                break;
+            }
+
+            guards.add(guard.unwrap());
+            index++;
         }
 
-        var head = unwrapWrappers(elements.get(0));
-
-        if (! (head instanceof Expression.Not not)) {
-            return Optional.empty();
+        if (guards.isEmpty()) {
+            return Option.none();
         }
 
-        var notInner = unwrapWrappers(not.expression());
+        var rest = elements.subList(index, elements.size());
+        Expression body = rest.size() == 1
+                          ? rest.getFirst()
+                          : new Expression.Sequence(seq.span(), List.copyOf(rest));
 
-        if (! (notInner instanceof Expression.Reference ref)) {
-            return Optional.empty();
+        return Option.some(new KeywordSkipInfo(List.copyOf(guards), body));
+    }
+
+    /** The rule named by a leading {@code !Rule} guard, when it resolves to a literal-set rule. */
+    private static Option<String> leadingGuardName(Expression element, Map<String, Rule> ruleMap) {
+        if (! (unwrapWrappers(element) instanceof Expression.Not not)) {
+            return Option.none();
+        }
+
+        if (! (unwrapWrappers(not.expression()) instanceof Expression.Reference ref)) {
+            return Option.none();
         }
 
         var referenced = ruleMap.get(ref.ruleName());
 
-        if (referenced == null) {
-            return Optional.empty();
+        if (referenced == null || !isLiteralSetRule(referenced.expression())) {
+            return Option.none();
         }
 
-        if (!isLiteralSetRule(referenced.expression())) {
-            return Optional.empty();
-        }
-
-        var rest = elements.subList(1, elements.size());
-        Expression body = rest.size() == 1
-                          ? rest.get(0)
-                          : new Expression.Sequence(seq.span(), List.copyOf(rest));
-
-        return Optional.of(new KeywordSkipInfo(ref.ruleName(), body));
+        return Option.some(ref.ruleName());
     }
 
     /**
@@ -318,27 +651,41 @@ public final class RuleClassifier {
      * guard expressions (which are ignored — only the leading literals matter
      * for keyword resolution).
      */
-    static boolean isLiteralSetRule(Expression expr) {
+    /**
+     * The alternatives of a literal-set body, or empty when the body is not one.
+     *
+     * <p>A body naming a single keyword ({@code PartitionKW <- < 'PARTITION'i ![a-zA-Z0-9_$] >})
+     * is a set of one. Requiring a {@link Expression.Choice} excluded every such rule from guard
+     * detection, which is why a rule guarded by several single-keyword rules was not recognised.
+     *
+     * <p>{@link #isLiteralSetRule} and {@link #extractLiteralSet} both read this: they answer the
+     * same question and must not drift apart.
+     */
+    private static List<Expression> literalSetAlternatives(Expression expr) {
         var unwrapped = unwrapWrappers(expr);
-        Expression choiceCandidate = unwrapped;
+        Expression candidate = unwrapped;
 
         if (unwrapped instanceof Expression.Sequence seq) {
             if (seq.elements().isEmpty()) {
-                return false;
+                return List.of();
             }
 
-            choiceCandidate = unwrapWrappers(seq.elements().get(0));
+            candidate = unwrapWrappers(seq.elements().getFirst());
         }
 
-        if (! (choiceCandidate instanceof Expression.Choice choice)) {
+        return candidate instanceof Expression.Choice choice
+               ? choice.alternatives()
+               : List.of(candidate);
+    }
+
+    static boolean isLiteralSetRule(Expression expr) {
+        var alternatives = literalSetAlternatives(expr);
+
+        if (alternatives.isEmpty()) {
             return false;
         }
 
-        if (choice.alternatives().isEmpty()) {
-            return false;
-        }
-
-        for (var alt : choice.alternatives()) {
+        for (var alt : alternatives) {
             if (extractLeadingLiteral(alt).isEmpty()) {
                 return false;
             }
@@ -353,24 +700,10 @@ public final class RuleClassifier {
      * than a boolean. Returns an empty list if the shape doesn't match.
      */
     static List<String> extractLiteralSet(Expression expr) {
-        var unwrapped = unwrapWrappers(expr);
-        Expression choiceCandidate = unwrapped;
+        var alternatives = literalSetAlternatives(expr);
+        var out = new ArrayList<String>(alternatives.size());
 
-        if (unwrapped instanceof Expression.Sequence seq) {
-            if (seq.elements().isEmpty()) {
-                return List.of();
-            }
-
-            choiceCandidate = unwrapWrappers(seq.elements().get(0));
-        }
-
-        if (! (choiceCandidate instanceof Expression.Choice choice)) {
-            return List.of();
-        }
-
-        var out = new ArrayList<String>(choice.alternatives().size());
-
-        for (var alt : choice.alternatives()) {
+        for (var alt : alternatives) {
             var litOpt = extractLeadingLiteral(alt);
 
             if (litOpt.isEmpty()) {
